fix some header alignment issues

--- a/style/dist.css
+++ b/style/dist.css
@@ -11519,14 +11519,13 @@ a {
 
 @media (max-width: 575.98px) {
   .logo-text-size {
-    font-size: 2.25rem;
+    font-size: 2.625rem;
     line-height: 0;
   }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
   .logo-text-size {
     font-size: 2.625rem;
-    line-height: 0;
   }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -11548,12 +11547,13 @@ a {
 
 @media (max-width: 575.98px) {
   .answer-question-link {
-    margin-top: 20px;
+    margin-top: -20px;
+    margin-right: 50px;
   }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
   .answer-question-link {
-    margin-top: 12px;
+    margin-top: 17px;
   }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -11571,7 +11571,7 @@ a {
 @media (min-width: 1200px) {
   .answer-question-link {
     font-size: 2.25rem;
-    margin-top: 35px;
+    margin-top: 33px;
   }
 }
 
@@ -11581,7 +11581,7 @@ a {
 }
 
 .answer-question-link {
-  color: white;
+  color: #fff;
   font-weight: normal;
 }
 
@@ -11627,6 +11627,10 @@ a {
 }
 .header-solid a {
   color: white;
+}
+
+#xs-header-alignment {
+  padding-left: 37px;
 }
 
 a:hover {
