--- a/style/style.scss
+++ b/style/style.scss
@@ -18,12 +18,11 @@ a {
 
 .logo-text-size {
    @include media-breakpoint-only(xs) {
-      font-size: $font-size-base * 1.5;
+      font-size: $font-size-base * 1.75;
       line-height: 0;
    }
    @include media-breakpoint-only(sm) {
       font-size: $font-size-base * 1.75;
-      line-height: 0;
    }
    @include media-breakpoint-only(md) {
       font-size: $font-size-base * 2.25;
@@ -39,10 +38,11 @@ a {
 
 .answer-question-link {
    @include media-breakpoint-only(xs) {
-      margin-top: 20px;
+      margin-top: -20px;
+      margin-right: 50px;
    }
    @include media-breakpoint-only(sm) {
-      margin-top: 12px;
+      margin-top: 17px;
    }
    @include media-breakpoint-only(md) {
       font-size: $font-size-base;
@@ -54,7 +54,7 @@ a {
    }
    @include media-breakpoint-only(xl) {
       font-size: $font-size-base * 1.5;
-      margin-top: 35px;
+      margin-top: 33px;
    }
 }
 
@@ -64,7 +64,7 @@ a {
 }
 
 .answer-question-link {
-   color: white;
+   color: $white;
    font-weight: normal;
 }
 
@@ -104,10 +104,15 @@ img {
 .header-solid {
    background-color: $gray-900;
    height: 90px;
+
    color: $white;
    a {
       color: white;
    }
+}
+
+#xs-header-alignment {
+   padding-left: 37px;
 }
 
 a:hover {
